tests/util/snapshots/list__util__list_mutants_in_cfg_attr_test_skip_json.snap
---
source: tests/util/mod.rs
assertion_line: 69
expression: "String::from_utf8_lossy(&output.stdout)"

---
[
  {
    "diff": "--- src/lib.rs\n+++ replace double -> usize with 0\n@@ -10,17 +10,17 @@\n         a *= i;\n     }\n     a\n }\n \n // This has a cfg_attr, but not one that we should match\n #[cfg_attr(feature = \"magic\", sparkles, crackles)]\n pub fn double(x: usize) -> usize {\n-    2 * x\n+    0 /* ~ changed by cargo-mutants ~ */\n }\n \n #[test]\n fn test_factorial() {\n     println!(\"factorial({}) = {}\", 6, factorial(6)); // This line is here so we can see it in --nocapture\n     assert_eq!(factorial(6), 720);\n }\n \n",
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "0",
    "span": {
      "end": {
        "column": 10,
        "line": 18
      },
      "start": {
        "column": 5,
        "line": 18
      }
    }
  },
  {
    "diff": "--- src/lib.rs\n+++ replace double -> usize with 1\n@@ -10,17 +10,17 @@\n         a *= i;\n     }\n     a\n }\n \n // This has a cfg_attr, but not one that we should match\n #[cfg_attr(feature = \"magic\", sparkles, crackles)]\n pub fn double(x: usize) -> usize {\n-    2 * x\n+    1 /* ~ changed by cargo-mutants ~ */\n }\n \n #[test]\n fn test_factorial() {\n     println!(\"factorial({}) = {}\", 6, factorial(6)); // This line is here so we can see it in --nocapture\n     assert_eq!(factorial(6), 720);\n }\n \n",
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "1",
    "span": {
      "end": {
        "column": 10,
        "line": 18
      },
      "start": {
        "column": 5,
        "line": 18
      }
    }
  },
  {
    "diff": "--- src/lib.rs\n+++ replace * with + in double\n@@ -10,17 +10,17 @@\n         a *= i;\n     }\n     a\n }\n \n // This has a cfg_attr, but not one that we should match\n #[cfg_attr(feature = \"magic\", sparkles, crackles)]\n pub fn double(x: usize) -> usize {\n-    2 * x\n+    2 + /* ~ changed by cargo-mutants ~ */ x\n }\n \n #[test]\n fn test_factorial() {\n     println!(\"factorial({}) = {}\", 6, factorial(6)); // This line is here so we can see it in --nocapture\n     assert_eq!(factorial(6), 720);\n }\n \n",
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "BinaryOperator",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "+",
    "span": {
      "end": {
        "column": 8,
        "line": 18
      },
      "start": {
        "column": 7,
        "line": 18
      }
    }
  },
  {
    "diff": "--- src/lib.rs\n+++ replace * with / in double\n@@ -10,17 +10,17 @@\n         a *= i;\n     }\n     a\n }\n \n // This has a cfg_attr, but not one that we should match\n #[cfg_attr(feature = \"magic\", sparkles, crackles)]\n pub fn double(x: usize) -> usize {\n-    2 * x\n+    2 / /* ~ changed by cargo-mutants ~ */ x\n }\n \n #[test]\n fn test_factorial() {\n     println!(\"factorial({}) = {}\", 6, factorial(6)); // This line is here so we can see it in --nocapture\n     assert_eq!(factorial(6), 720);\n }\n \n",
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "BinaryOperator",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "/",
    "span": {
      "end": {
        "column": 8,
        "line": 18
      },
      "start": {
        "column": 7,
        "line": 18
      }
    }
  }
]
